<resources>
    <string name="app_name">InternApp</string>
    <string name="internify">Internify</string>
    <string name="detail_01">Find your idel internship today!</string>
    <string name="screen2_details">Follow your favorite companies and never miss an internship opportunity!</string>
    <string name="Next">next</string>
    <string name="Skip">skip</string>
    <string name="start">GOT IT</string>
    <string name="Login">log in</string>
    <string name="Register">register</string>
    <string name="home_activity">Home</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Title_profile">My Profile</string>
    <string name="Title_home">Home</string>
    <string name="full_time">FULL-TIME</string>
    <string name="part_time">PART-TIME</string>
    <string name="name">Chand Mohd</string>
    <string name="address">Delhi,IN</string>
    <string name="work">Android developer at Innobles Technologies</string>
    <string name="education">EDUCATION</string>
    <string name="experiance">EXPERIANCE</string>
    <string name="skills">SKILLS</string>
    <string name="course_detail">B.E in ECE graduated with First class</string>
    <string name="th12_details">Intermidiate in mathematics with Distinction</string>
    <string name="school_details">High school with first class</string>
    <string name="company_name">Innobles Smart Technolgy Pvt.Ltd</string>
    <string name="inno_duration">Apr 2018 - Present</string>
    <string name="inno_place">Delhi,India</string>
    <string name="emids_place">Bangalore,Karnataka,India</string>
    <string name="emids_duration">Sep 2017 - Apr 2018</string>
    <string name="emids_name">Emids Technology Pvt.Ltd</string>
    <string name="marketInter">Marketing Internship</string>
    <string name="marketIntern_desc">Mummy cooks, Dublin</string>
    <string name="marketIntern_timing">Added 2 days ago</string>
    <string name="design_title">Design Internship</string>
    <string name="design_desc">Fluid UI,Dublin</string>
    <string name="design_timing">Added 4 days ago</string>
    <string name="fashion_title">Fashion Internship</string>
    <string name="fashion_desc">KC Peaches,Tralee</string>
    <string name="eng_title">Engineering Internship</string>
    <string name="eng_desc">Clifton Associate, Belfast</string>
    <string name="eng_timing">Added 5 days ago</string>
    <string name="data_analysis">Data Analysis Intership</string>
    <string name="data_desc">Next Generation, Cork</string>
    <string name="analysis_timing">Added 6 days ago</string>
    <string name="staff_title">Staff Publicist Internship</string>
    <string name="staff_desc">Tower Records,Dublin</string>
    <string name="web_title">Web Developer internship</string>
    <string name="web_desc">Ding, Dublin</string>
    <string name="job_desc">Job Description</string>
    <string name="job_detail_desc">We are looking for recent graduate or someone who is passionate about digital marketing to help us in all the things digital for both our business and our clients businesses.</string>
    <string name="job_requirment">What We\'re Looking for</string>
    <string name="req_details">The Ideal Candidate should be:\n \u2022 passionate about digital marketing \n \u2022 Looking to gain professional experiace in small business \n \u2022 Detail oriented and well organized \n \u2022 Good with facebook, Twitter, Linkdlen and Youtube \n \u2022 Fluent in English(Written and verbal)\n \u2022 Like working from home </string>
    <string name="dialog_message">Do you wish to send this application now</string>
    <string name="dialog_sent">Application sent!</string>
    <string name="school">National University of \n Galway(NUI)</string>
    <string name="societies">Preseident of the chair \n Club (2013-2016)</string>
    <string name="school_name">St.Enda\'s College,\nThreadneedle Rd,\nCo.Galway</string>
    <string name="attended_year">Your Attended</string>
    <string name="grade">Grade</string>
    <string name="grade_value">565 LC Points (2008)</string>
    <string name="company_info">Carlingford Associate \nBalisnaloe, Galway</string>
    <string name="positon">Digital Marketing intern</string>
    <string name="description">I kept eye on \ncompetitors,developed \nnew marketing ideas \nand maintained the \ncompany\'s social media</string>
</resources>
