<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Blue">

        <RelativeLayout
            android:id="@+id/layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_id"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/slide_title"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/layout_id"
            android:text="@string/name"
            android:textColor="@color/darkBlue"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_id"
            android:layout_marginLeft="@dimen/slide_title"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/layout_id"
            android:text="@string/address"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_id"
            android:layout_marginLeft="@dimen/slide_title"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/layout_id"
            android:text="@string/work"
            android:textColor="@color/lighter" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_educations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_layout"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/education"
            style="@drawable/text_color"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/education" />

        <Button
            android:id="@+id/exp"
            style="@drawable/text_color"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/education"
            android:background="@drawable/button_selector"
            android:text="@string/experiance" />

        <Button
            android:id="@+id/skill"
            style="@drawable/text_color"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/exp"
            android:background="@drawable/button_selector"
            android:text="@string/skills" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/edu_infoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_educations"
        android:layout_marginTop="10dp">

    </FrameLayout>

</RelativeLayout>