<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/img_id"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/internify" />

    <TextView
        android:id="@+id/internify_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/internify"
        android:textColor="@color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/internify_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/Login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_register"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/Register"
        android:textColor="@color/white" />

</RelativeLayout>