<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/market_blur"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apply_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/marketInter"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/apply_title"
                android:layout_centerHorizontal="true"
                android:text="@string/marketIntern_desc"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Relative_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/float_name_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bookmark"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="BOOKMARK" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/slide_desc"
                android:layout_marginTop="@dimen/slide_title"
                android:src="@drawable/bookmark" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/bookmark"
                android:layout_centerInParent="true"
                android:src="@drawable/share" />

            <TextView
                android:id="@+id/float_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/share"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:text="SHARE" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/bookmark"
                android:layout_marginRight="@dimen/slide_desc"
                android:src="@drawable/message" />

            <TextView
                android:id="@+id/float_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/message"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:text="MESSAGE" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/float_name_bookmark"
                android:layout_marginTop="10dp"
                android:background="@color/darkGray" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/slide_desc"
                android:layout_marginTop="@dimen/slide_desc"
                android:background="@color/white">

                <TextView
                    android:id="@+id/job_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_desc"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/job_desc"
                    android:text="@string/job_detail_desc"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/requirment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_desc"
                    android:layout_marginTop="@dimen/slide_desc"
                    android:text="@string/job_requirment"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/req_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/requirment"
                    android:text="@string/req_details"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/slide_desc"/>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/apply_now"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:background="@drawable/apply_button"
        android:text="Apply Now"
        android:textColor="@color/darkBlue"
        app:layout_anchor="@id/LinearLayout1"
        app:layout_anchorGravity="bottom|center" />

</android.support.design.widget.CoordinatorLayout>
